--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
 
     </div>
-
+    <canvas id="myCanvas" width="200" height="100" style="border: 1px solid black;"></canvas>
+    
 
 
     <script src="app.js"></script>
