--- a/maze-2.html
+++ b/maze-2.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style-2.css">
+    <script src="app-2.js" defer></script>
 </head>
 <body>
+
     <span class="player"></span>
     <span class="goal"></span>
     <div class="maze">
@@ -48,6 +50,6 @@
     
 
 
-    <script src="app-2.js"></script>
+
 </body>
 </html>
