the upper and lower limit walls no longer bug out

--- a/maze-2.html
+++ b/maze-2.html
@@ -15,8 +15,7 @@
         <option onclick="chooseSize()" value="1580">Large</option>
     </select>    
 
-    
-
+    <canvas width="200" height="500" style="border: 1px solid black"></canvas>
 
 
 </body>
