--- a/kruskal.html
+++ b/kruskal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kruskal Maze</title>
-    <link rel="stylesheet" href="kruskal.css">
+    <link rel="stylesheet" type="text/css" href="kruskal.css">
 </head>
 <body>
     
